--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==2.3.0
 Django==5.1.5
 djangorestframework==3.15.2
 djangorestframework-jsonapi==7.1.0
+django-cors-headers==4.3.1
 inflection==0.5.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
