--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.8.1
 dj-database-url==2.3.0
 Django==5.1.5
+django-cors-headers==4.6.0
 djangorestframework==3.15.2
 djangorestframework-jsonapi==7.1.0
-django-cors-headers==4.3.1
 inflection==0.5.1
+pillow==11.1.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
